@@ -183,22 +183,6 @@ typedef struct include_filter_ctx {
     }                                                             \
 }
 
-#define SPLIT_AND_PASS_PRETAG_BUCKETS(brgd, cntxt, next)          \
-if ((APR_BRIGADE_EMPTY(cntxt->ssi_tag_brigade)) &&                \
-    (cntxt->head_start_bucket != NULL)) {                         \
-    apr_bucket_brigade *tag_plus;                                 \
-    int rv;                                                       \
-                                                                  \
-    tag_plus = apr_brigade_split(brgd, cntxt->head_start_bucket); \
-    rv = ap_pass_brigade(next, brgd);                             \
-    if (rv != APR_SUCCESS) {                                      \
-        return rv;                                                \
-    }                                                             \
-    cntxt->bytes_parsed = 0;                                      \
-    brgd = tag_plus;                                              \
-}
-
-
 typedef int (include_handler_fn_t)(include_ctx_t *ctx, apr_bucket_brigade **bb,
                        request_rec *r, ap_filter_t *f, apr_bucket *head_ptr, 
                        apr_bucket **inserted_head);
